# bank_payments_system

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  out.csv  transactions.csv
src/: account_manager.rs  lib.rs  main.rs  tx_processor.rs  tx_stream_reader.rs
tests/: integration_test.rs
